# emory_trust_walit

TRUST/: __init__.py  pyproject.toml
TRUST/langserve_trust/: README-langserve.md  client_example.py  requirements.txt  server.py  server.py 9-2-25 worse playground layout but docs renders.txt  server.py 9-9-25 client works but playground fails.txt  server.py 9-9-25 playground works but client fails.txt  test input for playground.txt
TRUST/langserve_trust/trust_adapter/: runner.py  schemas.py
TRUST/trust/: README.md
TRUST/trust/CAPS/agent_templates/: CAPS5_var_template.json
TRUST/trust/CAPS/agent_vars/: CAPS5.json
TRUST/trust/agent/: assessment.py  assessment_funcs.py  assessment_prompts.json  base_module.py  conversation.py  form_funcs.py  framework.py  prompt_templates.json
TRUST/trust/configs/: agent.conf
TRUST/trust/data_struct/: record_struct.py  variable_struct.py
TRUST/trust/llms/: gpt_call.py  prompt_formatter.py
TRUST/trust/utils/: config.py  file.py  helpers.py  logger.py  send_email.py
TRUST/trust_all.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
emory_walit_LangServe/: .env  requirements.txt
emory_walit_LangServe/examples/: PromptWithHistoryAndReports.txt  PromptWithHistoryAndReports2.txt  SimplePrompt1.txt  SimplePrompt2.txt
walit_examples/: .env.example  HOW_TO_RUN.md  emory_server.py  walit_client.py  walit_client_conversational.py
walit_examples/examples/: PromptWithHistory.txt
